Updated Notebooks for Olmocr to avoid unstable Kernel

--- a/vllm_ocr_model_notebooks/01_download_model.ipynb
+++ b/vllm_ocr_model_notebooks/01_download_model.ipynb
@@ -279,7 +279,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5eb77cc5-638e-4ca7-b5d7-33dda3ee0adf",
      "showTitle": false,
@@ -311,22 +314,6 @@
    "source": [
     "%restart_python"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "b471eadc-e59f-43d9-8cdc-7ddfc98127ae",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -361,7 +348,7 @@
      "nuid": "ec9f5aa6-ea09-4436-9101-a590d4f16e79",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "config",
+      "defaultValue": "olmocr_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
@@ -372,7 +359,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "config",
+      "defaultValue": "olmocr_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
