--- a/vllm_ocr_model_notebooks/02_test_inference.ipynb
+++ b/vllm_ocr_model_notebooks/02_test_inference.ipynb
@@ -10,29 +10,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "53189d6e-6842-4936-862e-d820eb725266",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sh \n",
-    "apt update\n",
-    "apt-get install -y poppler-utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "ef543d35-d226-47c2-b9ca-680d6c863146",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -152,7 +129,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7bad119a-9ab5-4df6-8334-8908cedf76ec",
      "showTitle": false,
@@ -189,7 +169,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c698b438-72df-423f-9793-72a2c2e7f6ff",
      "showTitle": false,
@@ -248,6 +231,55 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "02b8dddc-745c-4e0c-b74b-88840ef11c75",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "import base64\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6a1c6e42-db59-4cb5-bee7-db25554eb4ba",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from transformers import AutoProcessor, AutoModelForImageTextToText\n",
+    "import torch\n",
+    "import mlflow.pyfunc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "5f83a507-b38b-4f80-ae2e-2cdf08d0ecd4",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -256,12 +288,9 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from transformers import AutoProcessor, AutoModelForVision2Seq\n",
-    "\n",
     "processor = AutoProcessor.from_pretrained(cache_local)\n",
     "\n",
-    "model = AutoModelForVision2Seq.from_pretrained(\n",
+    "model = AutoModelForImageTextToText.from_pretrained(\n",
     "  cache_local,\n",
     "  torch_dtype=torch.bfloat16,\n",
     "  device_map=\"auto\"\n",
@@ -336,6 +365,29 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "efb3a915-d0ab-4c9f-845a-71ffd08ef8b3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sh \n",
+    "apt update\n",
+    "apt-get install -y poppler-utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "cc9273dc-64b1-4ff7-a72b-9c2033580b78",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -344,7 +396,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install qwen-vl-utils[decord]==0.0.8"
+    "# %pip install qwen-vl-utils[decord]==0.0.8"
    ]
   },
   {
@@ -365,17 +417,25 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import Qwen2_5_VLForConditionalGeneration, AutoTokenizer, AutoProcessor\n",
-    "from qwen_vl_utils import process_vision_info\n",
+    "# from transformers import Qwen2_5_VLForConditionalGeneration, AutoTokenizer, AutoProcessor\n",
+    "# from qwen_vl_utils import process_vision_info\n",
     "\n",
-    "image_inputs, video_inputs = process_vision_info(messages)\n",
-    "inputs = processor(\n",
-    "    text=[text],\n",
-    "    images=image_inputs,\n",
-    "    videos=video_inputs,\n",
-    "    padding=True,\n",
-    "    return_tensors=\"pt\",\n",
-    ")"
+    "# image_inputs, video_inputs = process_vision_info(messages)\n",
+    "# inputs = processor(\n",
+    "#     text=[text],\n",
+    "#     images=image_inputs,\n",
+    "#     videos=video_inputs,\n",
+    "#     padding=True,\n",
+    "#     return_tensors=\"pt\",\n",
+    "# )\n",
+    "\n",
+    "inputs = processor.apply_chat_template(\n",
+    "    messages,\n",
+    "    add_generation_prompt=True,\n",
+    "    tokenize=True,\n",
+    "    return_dict=True,\n",
+    "    return_tensors=\"pt\"\n",
+    ").to(model.device)"
    ]
   },
   {
@@ -451,7 +511,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e9b16909-7229-4bdb-a00d-a22166a8e150",
      "showTitle": false,
@@ -497,7 +560,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5261002272481229,
+     "commandId": 7040052326874920,
      "dataframes": [
       "_sqldf"
      ]
@@ -507,11 +570,11 @@
    "notebookName": "02_test_inference",
    "widgets": {
     "config": {
-     "currentValue": "nuextract_config",
+     "currentValue": "olmocr_config",
      "nuid": "65870d79-6cfc-41b9-bd1a-2550fd885416",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "config",
+      "defaultValue": "olmocr_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
@@ -522,7 +585,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "config",
+      "defaultValue": "olmocr_config",
       "label": "Configuration File",
       "name": "config",
       "options": {
