--- a/vllm_ocr_model_notebooks/03_deploy_vllm.ipynb
+++ b/vllm_ocr_model_notebooks/03_deploy_vllm.ipynb
@@ -18,9 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "%sh \n",
-    "apt update\n",
-    "apt-get install -y poppler-utils"
+    "%pip install -r requirements.txt\n",
+    "%restart_python"
    ]
   },
   {
@@ -33,7 +32,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ef543d35-d226-47c2-b9ca-680d6c863146",
+     "nuid": "d166d613-f3b0-494f-8558-b0ad8702184a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -41,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt"
+    "dbutils.widgets.text(\"config\", \"olmocr_config\", \"Configuration File\")"
    ]
   },
   {
@@ -65,7 +64,9 @@
     "import yaml\n",
     "import os\n",
     "\n",
-    "with open(\"../configs/olmocr_config.yaml\", \"r\") as f:\n",
+    "config_path = dbutils.widgets.get(\"config\")\n",
+    "\n",
+    "with open(f\"../configs/{config_path}.yaml\", \"r\") as f:\n",
     "    config = yaml.safe_load(f)\n",
     "\n",
     "catalog_name = config.get(\"catalog_name\")\n",
@@ -105,7 +106,6 @@
    "outputs": [],
    "source": [
     "import shutil\n",
-    "import os\n",
     "\n",
     "# Copy volume cache to local cache if not already there\n",
     "if not os.path.exists(cache_local):\n",
@@ -133,6 +133,78 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "2c00a156-da9f-4a39-9b51-f4d729f52fe2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "import base64\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "594a618a-d289-4d28-9b51-178b11d7d001",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from transformers import AutoProcessor, AutoModelForImageTextToText\n",
+    "import torch\n",
+    "import mlflow.pyfunc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "df4ad52f-948b-4b19-94cf-6b9d3ddaa24c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sh \n",
+    "apt update\n",
+    "apt-get install -y poppler-utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "831c0dd4-3c13-4e6a-a5da-c630a731478b",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -141,7 +213,28 @@
    },
    "outputs": [],
    "source": [
-    "%pip install qwen-vl-utils[decord]==0.0.8"
+    "# %pip install qwen-vl-utils[decord]==0.0.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a1ff62cc-0dc4-43a3-b688-6ec4f189f64c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pdf2image import convert_from_bytes"
    ]
   },
   {
@@ -164,16 +257,11 @@
    "source": [
     "import pandas as pd\n",
     "import torch\n",
-    "from transformers import (\n",
-    "    Qwen2_5_VLForConditionalGeneration,\n",
-    "    AutoProcessor,\n",
-    "    AutoModelForImageTextToText\n",
-    ")\n",
-    "from qwen_vl_utils import process_vision_info\n",
-    "import mlflow.pyfunc\n",
+    "from PIL import Image\n",
     "import base64\n",
     "from io import BytesIO\n",
-    "from PIL import Image\n",
+    "import mlflow.pyfunc\n",
+    "\n",
     "\n",
     "class OlmocrPyfunc(mlflow.pyfunc.PythonModel):\n",
     "    def load_context(self, context):\n",
@@ -194,65 +282,76 @@
     "        )\n",
     "\n",
     "    def predict(self, model_input: pd.DataFrame, params: dict = None) -> pd.Series:\n",
-    "      outputs = []\n",
-    "      max_tokens = params.get(\"max_tokens\", 1024) if params else 1024\n",
+    "        outputs = []\n",
+    "        max_tokens = params.get(\"max_tokens\", 1024) if params else 1024\n",
     "\n",
-    "      for _, row in model_input.iterrows():\n",
-    "          system_prompt = row.get(\n",
-    "              \"system_prompt\",\n",
-    "              \"You are a helpful assistant that extracts text from PDF images.\",\n",
-    "          )\n",
-    "          user_prompt = row.get(\"user_prompt\", \"\")\n",
+    "        for _, row in model_input.iterrows():\n",
+    "            system_prompt = row.get(\n",
+    "                \"system_prompt\",\n",
+    "                \"You are a helpful assistant that extracts text from PDF images.\",\n",
+    "            )\n",
+    "            user_prompt = row.get(\"user_prompt\", \"\")\n",
     "\n",
-    "          try:\n",
-    "              image_base64 = user_prompt[\"image\"]\n",
-    "              image_data = base64.b64decode(image_base64)\n",
-    "              image = Image.open(BytesIO(image_data)).convert(\"RGB\")\n",
-    "          except Exception as e:\n",
-    "              outputs.append(f\"Error processing image: {str(e)}\")\n",
-    "              continue\n",
+    "            try:\n",
+    "                image_base64 = user_prompt[\"image\"]\n",
+    "                image_data = base64.b64decode(image_base64)\n",
+    "                image = Image.open(BytesIO(image_data)).convert(\"RGB\")\n",
+    "            except Exception as e:\n",
+    "                outputs.append(f\"Error processing image: {str(e)}\")\n",
+    "                continue\n",
     "\n",
-    "          messages = [\n",
-    "              {\"role\": \"system\", \"content\": [{\"type\": \"text\", \"text\": system_prompt}]},\n",
-    "              {\n",
-    "                  \"role\": \"user\",\n",
-    "                  \"content\": [\n",
-    "                      {\"type\": \"image\", \"image\": image},\n",
-    "                      {\"type\": \"text\", \"text\": user_prompt[\"text\"]},\n",
-    "                  ],\n",
-    "              },\n",
-    "          ]\n",
-    "          \n",
-    "          text = self.processor.apply_chat_template(\n",
-    "              messages, tokenize=False, add_generation_prompt=True\n",
-    "          )\n",
+    "            messages = [\n",
+    "                {\n",
+    "                    \"role\": \"system\",\n",
+    "                    \"content\": [{\"type\": \"text\", \"text\": system_prompt}],\n",
+    "                },\n",
+    "                {\n",
+    "                    \"role\": \"user\",\n",
+    "                    \"content\": [\n",
+    "                        {\"type\": \"image\", \"image\": image},\n",
+    "                        {\"type\": \"text\", \"text\": user_prompt[\"text\"]},\n",
+    "                    ],\n",
+    "                },\n",
+    "            ]\n",
     "\n",
-    "          image_inputs, video_inputs = process_vision_info(messages)\n",
+    "            text = self.processor.apply_chat_template(\n",
+    "                messages, tokenize=False, add_generation_prompt=True\n",
+    "            )\n",
     "\n",
-    "          inputs = self.processor(  \n",
-    "              text=[text],\n",
-    "              images=image_inputs,\n",
-    "              videos=video_inputs,\n",
-    "              padding=True,\n",
-    "              return_tensors=\"pt\",\n",
-    "          ).to(self.device)\n",
+    "            #   image_inputs, video_inputs = process_vision_info(messages)\n",
     "\n",
-    "          prompt_len = inputs[\"input_ids\"].size(-1)\n",
+    "            #   inputs = self.processor(\n",
+    "            #       text=[text],\n",
+    "            #       images=image_inputs,\n",
+    "            #       videos=video_inputs,\n",
+    "            #       padding=True,\n",
+    "            #       return_tensors=\"pt\",\n",
+    "            #   ).to(self.device)\n",
     "\n",
-    "          with torch.inference_mode():\n",
-    "              generation = self.model.generate(**inputs, max_new_tokens=max_tokens)\n",
+    "            inputs = self.processor.apply_chat_template(\n",
+    "                messages,\n",
+    "                add_generation_prompt=True,\n",
+    "                tokenize=True,\n",
+    "                return_dict=True,\n",
+    "                return_tensors=\"pt\"\n",
+    "            ).to(self.model.device)\n",
     "\n",
-    "          generated_tokens = generation[0][prompt_len:]\n",
-    "          \n",
-    "          output_text = self.processor.batch_decode(\n",
-    "              generated_tokens.unsqueeze(0),  \n",
-    "              skip_special_tokens=True,\n",
-    "              clean_up_tokenization_spaces=False,\n",
-    "          )[0]  \n",
-    "          \n",
-    "          outputs.append(output_text)\n",
+    "            prompt_len = inputs[\"input_ids\"].size(-1)\n",
     "\n",
-    "      return pd.Series(outputs)"
+    "            with torch.inference_mode():\n",
+    "                generation = self.model.generate(**inputs, max_new_tokens=max_tokens)\n",
+    "\n",
+    "            generated_tokens = generation[0][prompt_len:]\n",
+    "\n",
+    "            output_text = self.processor.batch_decode(\n",
+    "                generated_tokens.unsqueeze(0),\n",
+    "                skip_special_tokens=True,\n",
+    "                clean_up_tokenization_spaces=False,\n",
+    "            )[0]\n",
+    "\n",
+    "            outputs.append(output_text)\n",
+    "\n",
+    "        return pd.Series(outputs)"
    ]
   },
   {
@@ -286,8 +385,8 @@
     "pdf_bytes = response.content\n",
     "    \n",
     "pil_images = convert_from_bytes(pdf_bytes)\n",
-    "\n",
     "img = pil_images[0]\n",
+    "\n",
     "buffer = BytesIO()\n",
     "img.save(buffer, format=\"PNG\")\n",
     "image_base64 = base64.b64encode(buffer.getvalue()).decode('utf-8')\n",
@@ -329,10 +428,28 @@
     "        self.artifacts = artifacts\n",
     "\n",
     "olmocr = OlmocrPyfunc()\n",
-    "olmocr.load_context(Context({\"model-weights\": cache_local}))\n",
-    "\n",
+    "olmocr.load_context(Context({\"model-weights\": cache_local}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5edcfbe9-a61e-4646-8659-a93ff49a0b85",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "output = olmocr.predict(df, params={\"max_tokens\": 512})\n",
-    "\n",
     "print(output[0])"
    ]
   },
@@ -745,31 +862,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "3ce320fb-2602-4091-9ee6-5b5e1310d436",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "databricks_token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
-    "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token\n",
-    "\n",
-    "endpoint_url = \"CHANGE_ME\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "091dc325-2880-4e43-b01b-fe3da81c7530",
+     "nuid": "137a13bc-0094-46f7-b171-f203651faca4",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -783,20 +876,17 @@
     "from PIL import Image\n",
     "import requests\n",
     "from io import BytesIO\n",
-    "from pdf2image import convert_from_bytes\n",
     "\n",
-    "url = \"https://arxiv.org/pdf/2502.13923\"\n",
+    "url = \"https://bpb-us-e1.wpmucdn.com/blogs.cornell.edu/dist/8/7752/files/2020/10/Screen-Shot-2020-10-07-at-1.35.57-PM.png\"\n",
     "response = requests.get(url)\n",
-    "pdf_bytes = response.content\n",
-    "    \n",
-    "pil_images = convert_from_bytes(pdf_bytes)\n",
-    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
-    "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
+    "img = Image.open(BytesIO(response.content)).convert(\"RGB\")\n",
     "\n",
-    "img = pil_images[0]\n",
     "buffer = BytesIO()\n",
     "img.save(buffer, format=\"PNG\")\n",
     "image_base64 = base64.b64encode(buffer.getvalue()).decode('utf-8')\n",
+    "\n",
+    "system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
+    "prompt = \"Extract the entire text from the abstract section in this image.\"\n",
     "\n",
     "df = pd.DataFrame({\n",
     "    \"system_prompt\": [system_prompt],\n",
@@ -807,6 +897,29 @@
     "        }\n",
     "    ]\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3ce320fb-2602-4091-9ee6-5b5e1310d436",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "databricks_token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
+    "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token\n",
+    "endpoint_url = \"CHANGE_ME\""
    ]
   },
   {
@@ -837,7 +950,7 @@
     "    return {'inputs': {name: data[name].tolist() for name in data.keys()} if isinstance(data, dict) else data.tolist()}\n",
     "\n",
     "def score_model(dataset):\n",
-    "    url = endpoint_url,\n",
+    "    url = endpoint_url\n",
     "    headers = {'Authorization': f'Bearer {os.environ.get(\"DATABRICKS_TOKEN\")}', 'Content-Type': 'application/json'}\n",
     "    ds_dict = {'dataframe_split': dataset.to_dict(orient='split')} if isinstance(dataset, pd.DataFrame) else create_tf_serving_json(dataset)\n",
     "    data_json = json.dumps(ds_dict, allow_nan=True)\n",
@@ -1057,7 +1170,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6040444310335074,
+     "commandId": 7040052326874521,
      "dataframes": [
       "_sqldf"
      ]
@@ -1065,7 +1178,34 @@
     "pythonIndentUnit": 2
    },
    "notebookName": "03_deploy_vllm",
-   "widgets": {}
+   "widgets": {
+    "config": {
+     "currentValue": "olmocr_config",
+     "nuid": "0472a29f-63da-462e-abb3-be594030470c",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "olmocr_config",
+      "label": "Configuration File",
+      "name": "config",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "olmocr_config",
+      "label": "Configuration File",
+      "name": "config",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
