Updated deployments due to kernel instability with poppler

--- a/vllm_ocr_model_notebooks/03a_nuextract_deploy_vllm.ipynb
+++ b/vllm_ocr_model_notebooks/03a_nuextract_deploy_vllm.ipynb
@@ -958,6 +958,57 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "b6e78209-6f58-4c57-8a2b-b7aba380b1bd",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "If poppler is installed, you can use pdfs"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# import json\n",
+    "# import base64\n",
+    "# from PIL import Image\n",
+    "# import requests\n",
+    "# from io import BytesIO\n",
+    "# from pdf2image import convert_from_bytes\n",
+    "\n",
+    "# url = \"https://arxiv.org/pdf/2502.13923\"\n",
+    "# response = requests.get(url)\n",
+    "# pdf_bytes = response.content\n",
+    "    \n",
+    "# pil_images = convert_from_bytes(pdf_bytes)\n",
+    "# img = pil_images[0]\n",
+    "\n",
+    "# buffer = BytesIO()\n",
+    "# img.save(buffer, format=\"PNG\")\n",
+    "# image_base64 = base64.b64encode(buffer.getvalue()).decode('utf-8')\n",
+    "\n",
+    "# system_prompt=\"You are a helpful assistant that extracts text from PDF images.\"\n",
+    "# prompt = \"Extract the entire text from the abstract section in this image.\"\n",
+    "\n",
+    "# df = pd.DataFrame({\n",
+    "#     \"system_prompt\": [system_prompt],\n",
+    "#     \"user_prompt\": [\n",
+    "#         {\n",
+    "#             \"text\": prompt,\n",
+    "#             \"image\": image_base64\n",
+    "#         }\n",
+    "#     ]\n",
+    "# })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "3ce320fb-2602-4091-9ee6-5b5e1310d436",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -968,7 +1019,7 @@
    "source": [
     "databricks_token = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get()\n",
     "os.environ[\"DATABRICKS_TOKEN\"] = databricks_token\n",
-    "endpoint_url = \"CHANGE_ME\""
+    "endpoint_url = \"https://adb-984752964297111.11.azuredatabricks.net/serving-endpoints/nuextract2_endpoint/invocations\""
    ]
   },
   {
@@ -1019,10 +1070,31 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "f853a25f-565c-4a69-8368-66672987a7cb",
-     "showTitle": false,
+     "nuid": "52f4f59d-8c6e-4c26-9879-8f7aa2f6597a",
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "PNG Result"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "score_model(df) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f853a25f-565c-4a69-8368-66672987a7cb",
+     "showTitle": true,
+     "tableResultSettingsMap": {},
+     "title": "PDF Result"
     }
    },
    "outputs": [],
@@ -1240,7 +1312,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6040444310334433,
+     "commandId": 8479387074281609,
      "dataframes": [
       "_sqldf"
      ]
